--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "title": "Project Name Here",
   "url": "urlgoeshere",
   "author": "Author Name Here",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "devDependencies": {
+        "grunt": "^0.4.5",
+        "grunt-contrib-sass": "^0.8.1",
+        "grunt-contrib-watch": "^0.6.1",
+        "matchdep": "^0.3.0",
+        "grunt-contrib-concat": "^0.5.0",
+        "grunt-contrib-uglify": "^0.5.1"
+    }
 }
