--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "url": "urlgoeshere",
   "author": "Author Name Here",
   "version": "0.0.1",
+  "private": true,
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.8.1",
