--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components"
+    "components"
   ],
   "dependencies": {
     "jquery": "~1.*",
