--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "jquery": "~1.*",
     "normalize-scss": "~3.0.1",
-    "jeet": "~6.1.2"
+    "jeet": "~6.1.2",
+    "modernizr-min": "^3.2.0"
   }
 }
