--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "jquery": "~1.*",
     "normalize-scss": "~3.0.1",
-    "jeet": "~6.1.2",
-    "modernizr-min": "^3.2.0"
+    "jeet": "~6.1.2"
   }
 }
