--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-image-optimization": "^0.1.3",
     "gulp-livereload": "^3.8.1",
     "gulp-minify": "0.0.7",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
