--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
     "gulp-image-optimization": "^0.1.3",
+    "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-minify": "0.0.7",
     "gulp-modernizr": "^1.0.0-alpha",
@@ -19,6 +20,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.3"
   }
 }
