--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.5.2",
     "gulp": "^3.9.1",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.0",
@@ -15,7 +17,7 @@
     "gulp-minify": "0.0.7",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-rename": "^1.2.2",
-    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sass": "^3.0.0",
     "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.2",
