--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-minify": "0.0.7",
     "gulp-modernizr": "^1.0.0-alpha",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "gulp-sass-lint": "^1.1.1",
