--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "gulp-uglify": "^1.5.3",
-    "jshint": "^2.9.3"
+    "jshint": "^2.9.3",
+    "jquery": "~1.*",
+    "normalize.css": "^5.0.0",
+    "respond.js": "^1.4.2",
+    "svg4everybody": "^2.1.4"
   }
 }
