--- a/package.json
+++ b/package.json
@@ -1,34 +1,48 @@
 {
-  "name": "projectnamehere",
-  "title": "Project Name Here",
-  "url": "urlgoeshere",
-  "author": "Author Name Here",
-  "version": "0.0.1",
+  "name": "",
+  "title": "",
+  "author": "",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "private": true,
+  "scripts": {
+    "start": "webpack --watch"
+  },
+  "license": "ISC",
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.5.2",
-    "babel-preset-es2015": "^6.18.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-image-optimization": "^0.1.3",
-    "gulp-jshint": "^2.0.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-minify": "0.0.7",
-    "gulp-modernizr": "^1.0.0-alpha",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.0.0",
-    "gulp-sass-lint": "^1.1.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-svgmin": "^1.2.2",
-    "gulp-svgstore": "^6.0.0",
-    "gulp-uglify": "^1.5.3",
-    "jshint": "^2.9.3",
-    "jquery": "~1.*",
-    "respond.js": "^1.4.2",
-    "svg4everybody": "^2.1.4"
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.7",
+    "browser-sync-webpack-plugin": "^1.1.4",
+    "css-loader": "^0.26.1",
+    "cssnano": "^3.10.0",
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-config-standard-babel": "0.0.2",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-promise": "^3.4.1",
+    "eslint-plugin-standard": "^2.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "postcss-apply": "^0.5.0",
+    "postcss-color-function": "^3.0.0",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-font-magician": "^1.6.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.2.2",
+    "postcss-nested": "^1.0.0",
+    "postcss-pxtorem": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.8.0",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-order": "^0.2.2",
+    "svg-spritemap-webpack-plugin": "^0.3.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1"
   }
 }
