--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.5.2",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.18.7",
     "browser-sync-webpack-plugin": "^1.1.4",
@@ -43,6 +43,6 @@
     "stylelint-order": "^0.2.2",
     "svg-spritemap-webpack-plugin": "^0.3.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1"
+    "webpack": "^3.0.0"
   }
 }
