--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "style-loader": "^0.13.1",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
+    "stylelint-order": "^0.6.0",
     "svg-spritemap-webpack-plugin": "^0.3.0",
     "url-loader": "^0.5.7",
     "webpack": "^3.0.0"
