--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,7 @@
   "plugins": [
     "stylelint-order"
   ],
+  "ignoreFiles": "./node_modules/**",
   "rules": {
     "at-rule-name-case": "lower",
     "at-rule-name-space-after": "always-single-line",
