--- a/package.json
+++ b/package.json
@@ -3,45 +3,45 @@
   "title": "",
   "author": "",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "webpack --watch"
+    "start": "webpack --watch --mode development",
+    "build": "webpack --mode production"
   },
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
-    "css-loader": "^0.28.9",
-    "cssnano": "^3.10.0",
-    "eslint": "^4.17.0",
-    "eslint-config-standard": "^10.2.1",
+    "css-loader": "^2.0.0",
+    "cssnano": "^4.1.7",
+    "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-babel": "0.0.2",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "postcss-apply": "^0.8.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "postcss-apply": "^0.11.0",
     "postcss-color-function": "^4.0.1",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.0",
-    "postcss-nested": "^3.0.0",
-    "postcss-pxtorem": "^4.0.1",
-    "style-loader": "^0.20.1",
-    "stylelint": "^8.4.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.9.0",
     "stylelint-config-standard": "^18.0.0",
-    "stylelint-order": "^0.8.0",
-    "svg-spritemap-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0"
+    "stylelint-order": "^2.0.0",
+    "svg-spritemap-webpack-plugin": "^2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   }
 }
