Style linting updates

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -42,7 +42,6 @@
     "declaration-block-semicolon-space-before": "never",
     "declaration-block-single-line-max-declarations": 1,
     "declaration-block-trailing-semicolon": "always",
-    "declaration-colon-newline-after": "always-multi-line",
     "declaration-colon-space-after": "always-single-line",
     "declaration-colon-space-before": "never",
     "declaration-empty-line-before": "never",
@@ -78,7 +77,7 @@
     "no-extra-semicolons": null,
     "no-invalid-double-slash-comments": true,
     "no-missing-end-of-source-newline": true,
-    "number-leading-zero": "never",
+    "number-leading-zero": "always",
     "number-no-trailing-zeros": true,
     "order/order": [
       "custom-properties",
@@ -107,7 +106,7 @@
     "selector-type-no-unknown": null,
     "shorthand-property-no-redundant-values": true,
     "string-no-newline": true,
-    "string-quotes": "single",
+    "string-quotes": "double",
     "unit-case": "lower",
     "unit-no-unknown": true,
     "value-list-comma-newline-after": "always-multi-line",
