--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "start": "webpack --watch --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack --watch --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "license": "ISC",
   "devDependencies": {
@@ -18,29 +18,29 @@
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
-    "css-loader": "^2.0.0",
+    "css-loader": "^3.2.0",
     "cssnano": "^4.1.7",
-    "eslint": "^5.9.0",
-    "eslint-config-standard": "^12.0.0",
+    "eslint": "^6.6.0",
+    "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-babel": "0.0.2",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^2.0.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "postcss-apply": "^0.11.0",
+    "file-loader": "^4.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "postcss-apply": "^0.12.0",
     "postcss-color-function": "^4.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^9.9.0",
-    "stylelint-config-standard": "^18.0.0",
-    "stylelint-order": "^2.0.0",
+    "style-loader": "^1.0.0",
+    "stylelint": "^12.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
     "svg-spritemap-webpack-plugin": "^2",
-    "url-loader": "^1.1.2",
+    "url-loader": "^2.2.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
