--- a/package.json
+++ b/package.json
@@ -1,47 +1,38 @@
 {
-  "name": "",
-  "title": "",
-  "author": "",
+  "name": "ssignite",
+  "title": "Silverstripe Ignite Starter Theme",
+  "author": "Andrew Houle <andrewhoule@gmail.com>",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack --watch --config webpack.dev.babel.js",
+    "build": "webpack --config webpack.prod.babel.js"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/register": "^7.16.0",
+    "babel-loader": "^8.2.3",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
-    "css-loader": "^3.2.0",
-    "cssnano": "^4.1.7",
-    "eslint": "^6.6.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-babel": "0.0.2",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^4.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.2.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "mini-css-extract-plugin": "^2.4.5",
     "postcss-apply": "^0.12.0",
-    "postcss-color-function": "^4.0.1",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.1.0",
-    "style-loader": "^1.0.0",
-    "stylelint": "^12.0.0",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^3.1.1",
-    "svg-spritemap-webpack-plugin": "^2",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "postcss-custom-media": "^8.0.0",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.0",
+    "postcss-nested": "^5.0.6",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.5.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-webpack-plugin": "^3.1.0",
+    "svg-spritemap-webpack-plugin": "^4.4.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1"
   }
 }
