--- a/.stylelintrc
+++ b/.stylelintrc
@@ -15,7 +15,7 @@
     "block-opening-brace-newline-after": "always-multi-line",
     "block-opening-brace-space-after": "always-single-line",
     "block-opening-brace-space-before": "always",
-    "color-hex-case": "lower",
+    "color-hex-case": "upper",
     "color-hex-length": "short",
     "color-no-invalid-hex": true,
     "comment-no-empty": true,
@@ -48,7 +48,6 @@
     "font-family-no-duplicate-names": true,
     "function-calc-no-unspaced-operator": true,
     "function-comma-newline-after": "always-multi-line",
-    "function-comma-space-after": "always-single-line",
     "function-comma-space-before": "never",
     "function-linear-gradient-no-nonstandard-direction": true,
     "function-max-empty-lines": 0,
@@ -103,7 +102,6 @@
     "selector-type-no-unknown": null,
     "shorthand-property-no-redundant-values": true,
     "string-no-newline": true,
-    "string-quotes": "double",
     "unit-case": "lower",
     "value-list-comma-space-after": "always-single-line",
     "value-list-comma-space-before": "never"
