--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ssignite",
   "title": "Silverstripe Ignite Starter Theme",
-  "author": "Andrew Houle <andrewhoule@gmail.com>",
+  "author": "Andrew Houle <andrew@craftandfunction.com>",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "private": true,
   "scripts": {
     "start": "webpack --watch --config webpack.dev.babel.js",
@@ -14,6 +14,7 @@
     "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.4",
     "@babel/register": "^7.16.0",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
@@ -30,7 +31,6 @@
     "stylelint": "^14.5.0",
     "stylelint-order": "^5.0.0",
     "stylelint-webpack-plugin": "^3.1.0",
-    "svg-spritemap-webpack-plugin": "^4.4.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1"
